--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+  "files.eol": "\n",
   "typescript.suggest.paths": true,
   "javascript.suggest.paths": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
