--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -11,6 +11,7 @@
     "formulahendry.auto-rename-tag",
     "miguelsolorio.fluent-icons",
     "orta.vscode-twoslash-queries",
-    "foxundermoon.shell-format"
+    "foxundermoon.shell-format",
+    "vivaxy.vscode-conventional-commits"
   ]
 }
