chore: convention commit config
auto commit and footer,scope prompts disabled

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,7 @@
   "explorer.sortOrder": "type",
   "[properties]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
-  }
+  },
+  "conventionalCommits.autoCommit": false,
+  "conventionalCommits.promptFooter": false
 }
