--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     "editor.defaultFormatter": "foxundermoon.shell-format"
   },
   "conventionalCommits.autoCommit": false,
-  "conventionalCommits.promptFooter": false
+  "conventionalCommits.promptFooter": false,
+  "conventionalCommits.promptScopes": false
 }
