chore: lintel extension added to recommended

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -12,6 +12,7 @@
     "miguelsolorio.fluent-icons",
     "orta.vscode-twoslash-queries",
     "foxundermoon.shell-format",
-    "vivaxy.vscode-conventional-commits"
+    "vivaxy.vscode-conventional-commits",
+    "mflo999.lintel"
   ]
 }
