feat: cli component generator
with plop tool we able to generate our component really fast

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,8 @@
   },
   "conventionalCommits.autoCommit": false,
   "conventionalCommits.promptFooter": false,
-  "conventionalCommits.promptScopes": false
+  "conventionalCommits.promptScopes": false,
+  "[handlebars]": {
+    "editor.formatOnSave": false
+  }
 }
