--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint:eslint": "eslint . --ext .ts,.tsx",
     "fix:eslint": "eslint --fix  . --ext .ts,.tsx",
     "lint:stylelint": "stylelint **/*.{css,scss,tsx}",
-    "fix:stylelint": "stylelint --fix ./src/**/*.{css,scss,tsx}"
+    "fix:stylelint": "stylelint --fix ./src/**/*.{css,scss,tsx}",
+    "gen": "plop"
   },
   "dependencies": {
     "eslint-plugin-simple-import-sort": "^9.0.0",
+    "inquirer-directory": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -34,6 +36,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "plop": "^3.1.2",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
