--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "starter-template",
   "version": "0.0.1",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,11 +9,11 @@
     "fix:eslint": "eslint --fix  . --ext .ts,.tsx",
     "lint:stylelint": "stylelint **/*.{css,scss,tsx}",
     "fix:stylelint": "stylelint --fix ./src/**/*.{css,scss,tsx}",
-    "gen": "tsc -p tsconfig.plop.json && copyfiles -u 1 .plop/template/** .plop/dist/ && plop --plopfile ./.plop/dist/index.js"
+    "gen": "tsc -p tsconfig.plop.json && copyfiles -u 1 .plop/template/** .plop/dist/ && plop --plopfile ./.plop/dist/index.js",
+    "plop": "cross-env TS_NODE_PROJECT='./ts-node.tsconfig.json' plop --plopfile ./.plop/index.ts"
   },
   "dependencies": {
     "eslint-plugin-simple-import-sort": "^9.0.0",
-    "inquirer-directory": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -29,6 +28,7 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
@@ -37,7 +37,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "plop": "^3.1.2",
+    "inquirer": "7.3.3",
+    "inquirer-directory": "^2.2.0",
+    "plop": "2.7.6",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
@@ -50,6 +52,7 @@
     "stylelint-order": "^6.0.1",
     "tailwindcss": "^3.2.4",
     "terser": "^5.16.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^4.0.3"
